# framework

./: CMakeLists.txt  README.md
DevIL/lib/: libIL.so.1.1.0
freeglut/lib/: libglut.so.3.9.0
inc/: Image.h  MeshData.h  Shader.h  gl_core_4_4.h  pgr.h
inc/sceneGraph/: MeshGeometry.h
src/: Image.cpp  Shader.cpp  pgr.cpp  trackball.cpp
src/sceneGraph/: MeshGeometry.cpp  MeshNode.cpp
